--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="StudentContextDB" connectionString="data source=(local);initial catalog=QuanLySinhVien;user id=admin;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="StudentContextDB1" connectionString="data source=DESKTOP-F3Q0A80\SQLEXPRESS01;initial catalog=QuanLySinhVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StudentContextDB" connectionString="data source=(local);initial catalog=QuanLySinhVien;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="StudentContextDB1" connectionString="data source=DESKTOP-F3Q0A80\SQLEXPRESS01;initial catalog=QuanLySinhVien;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
