--- a/Lab_4.csproj
+++ b/Lab_4.csproj
@@ -66,7 +66,16 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmOrder.Designer.cs">
+      <DependentUpon>frmOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="model\Falculty.cs" />
+    <Compile Include="model\Invoice.cs" />
+    <Compile Include="model\Order.cs" />
+    <Compile Include="model\Product.cs" />
     <Compile Include="model\Student.cs" />
     <Compile Include="model\StudentContextDB.cs" />
     <Compile Include="Program.cs" />
@@ -76,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmOrder.resx">
+      <DependentUpon>frmOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
